variables.Variables.scala.code
var nbpas: int =0()
while (!estSurBiscuit()){
  avance()
  nbpas=nbpas+1
}
  
prendBiscuit()
porteBiscuit()
var dejafait:int =0
while (dejafait!=nbpas){
  recule()
  dejafait=dejafait+1
}